syntax = "proto3";

package protobuf;


// Interface for the mysql service.
service MySQLService {
  // RPC to create a new MySQL instance, an instance is represented by a
  // user and a database. So this RPC creates a new user along with a database
  // which the user owns. After creating the database it returns the instance
  // created.
  rpc CreateMySQLInstance(None) returns (MySQLInstance) {}

  // This RPC deletes an existing MySQL instance, it deletes the user and the database
  // user is associated with. As a return value it results RPCResult depicting if the 
  // operation was successful or not.
  rpc DeleteMySQLInstance(MySQLInstance) returns (None) {}
}

message None {}

// Message respresenting a MySQL instance
message MySQLInstance {
  string username = 1;
  string database = 2;
  string password = 3;
}
